--- a/ucleague-frontend/src/app/team/team-list/team-list.component.html
+++ b/ucleague-frontend/src/app/team/team-list/team-list.component.html
@@ -26,21 +26,21 @@
       </ng-container>
 
       <!-- Total Champion League Column -->
-      <ng-container matColumnDef="totalChampionLeague">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Total Champion League </mat-header-cell>
-        <mat-cell *matCellDef="let row"></mat-cell>
+      <ng-container matColumnDef="totalChampionships">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Champion League </mat-header-cell>
+        <mat-cell *matCellDef="let row"> 
+            <mat-chip-list>
+                <mat-chip *ngFor="let championship of row.championships">{{championship.year}}</mat-chip>
+            </mat-chip-list>
+        </mat-cell>
       </ng-container>
 
-      <!-- Total Champion League Column -->
+      <!-- Actions -->
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef mat-sort-header></mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <span routerLink="/team/{{row.id}}">
-            <mat-icon>edit</mat-icon>
-          </span>
-          <span (click)="deleteTeam(row)">
-            <mat-icon>delete</mat-icon>
-          </span>
+        <mat-cell *matCellDef="let row" style="display: flex; justify-content: flex-end">
+          <a mat-icon-button aria-label="Edit team" routerLink="/team/{{row.id}}"><mat-icon>edit</mat-icon></a>
+          <a mat-icon-button aria-label="Delete team" (click)="deleteTeam(row)"><mat-icon>delete</mat-icon></a>
         </mat-cell>
       </ng-container>
 
