--- a/ucleague-frontend/src/app/team/team-form/team-form.component.html
+++ b/ucleague-frontend/src/app/team/team-form/team-form.component.html
@@ -43,7 +43,7 @@
 
     <mat-card-actions>
       <mat-divider></mat-divider>
-      <div class="button-row" style="padding-top:10px;">
+      <div class="button-row" style="padding-top:10px; display: flex; justify-content: flex-end;">
         <button mat-raised-button routerLink="/teams">Cancel</button>
         <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid">Accept</button>
       </div>
